GENERATOR_OUTPUT/src/kubeflow-apps/pipelines/patches/patch-cache-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-server
spec:
  template:
    spec:
      containers:
        - name: server
