GENERATOR_OUTPUT/src/kubeflow-apps/pipelines/patches/patch-metadata-grpc-deployment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
spec:
  template:
    spec:
      containers:
        - name: container
