GENERATOR_OUTPUT/src/kubeflow-apps/pipelines/patches/patch-ml-pipeline-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-ui
