GENERATOR_OUTPUT/src/kubeflow-apps/pipelines/patches/patch-metadata-grpc-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-istio-gateway/kubeflow-gateway
