GENERATOR_OUTPUT/src/kubeflow-apps/pipelines/patches/patch-ml-pipeline-ui-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            namespaces:
              - kubeflow-istio-gateway
    - when:
        - key: request.headers[kubeflow-userid]
          notValues:
            - "*"
        - key: request.headers[authorization]
          values:
            - "*"
